# we-agent

./: LICENSE  README.md  pyproject.toml
backend/: agent.py  app.py  config.py  database.py  language.py  logging_config.py  mongo_service.py  prompts.py  requirements.txt  schemas.py  tools.py  vectorstore.py  workflow_trace.py
backend/data/knowledge/: about_te_en.md  billing-faq.md  board_of_directors_en.md  internet-plans.md  management_team_en.md  router-setup.md  troubleshooting.md  we_air_postpaid_en.md  we_air_prepaid_en.md  we_ardy_prepaid_en.md  we_gold_en.md  we_internet_en.md  we_internet_space_super_en.md  we_life_en.md  we_sonic_en.md
frontend/: index.html  script.js  style.css  workflow.js
