[project]
name = "we-agent"
version = "1.0.0"
description = "WE Telecom AI Customer Support Agent"
readme = "../README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",

    "langchain>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-qdrant>=1.0.0",
    "langchain-mongodb>=0.10.0",

    "google-generativeai>=0.8.0",

    "qdrant-client>=1.10.0",
    "sentence-transformers>=3.0.0",

    "pymongo>=4.8.0",
    "dnspython>=2.6.1",
    "certifi>=2024.7.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.fastapi]
app = "app:app"